fixed issue with alignment

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
   width: 100%;
   /* border: 1px solid yellow; */
   text-align: center;
-  font-size: 3.5em;
+  font-size: 4.5em;
   padding: 2em;
   padding-top: 2.5em;
   color: rgb(215, 234, 254);
@@ -102,6 +102,7 @@ body {
 @keyframes moveCloudRow1 {
   100% {
     top: 100px;
+    opacity: 0.3;
   }
 }
 
@@ -124,8 +125,6 @@ body {
 /* Row 2 */
 
 .row-2 {
-  justify-content: space-around;
-  align-items: center;
   top: 100px;
   transition: all 1s ease-in-out;
   animation: moveCloudRow2 5s forwards;
@@ -134,6 +133,7 @@ body {
 @keyframes moveCloudRow2 {
   100% {
     top: 200px;
+    opacity: 0.3;
   }
 }
 
@@ -176,8 +176,7 @@ body {
 /* Row 3 */
 
 .row-3 {
-  justify-content: space-evenly;
-  align-items: center;
+  border: 1px solid blue;
   top: 200px;
   transition: all 1s ease-in-out;
   animation: moveCloudRow3 5s forwards;
@@ -186,42 +185,45 @@ body {
 @keyframes moveCloudRow3 {
   100% {
     top: 300px;
+    opacity: 0.3;
   }
 }
 
 .left-3 {
+  border: 1px solid white;
   background-image: url(assets/left-3.svg);
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   background-color: transparent;
   float: left;
-  margin-left: 300px;
+  margin-left: 200px;
   transition: all 1s ease-in-out;
   animation: moveCloudleft3 5s forwards;
 }
 
 @keyframes moveCloudleft3 {
   100% {
-    margin-left: 0;
+    margin-left: 100px;
   }
 }
 
 .right-3 {
+  border: 1px solid white;
   background-image: url(assets/right-3.svg);
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   background-color: transparent;
   float: right;
-  margin-right: 300px;
+  margin-right: 200px;
   transition: all 1s ease-in-out;
   animation: moveCloudRight3 5s forwards;
 }
 
 @keyframes moveCloudRight3 {
   100% {
-    margin-right: 0;
+    margin-right: 100px;
   }
 }
 
@@ -239,6 +241,7 @@ body {
 @keyframes moveCloudRow4 {
   100% {
     top: 350px;
+    opacity: 0.3;
   }
 }
 
